--- a/assets/css/maqueta.css
+++ b/assets/css/maqueta.css
@@ -1,3 +1,157 @@
 * {
-    background-color: aquamarine;
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+    font-size: 1em;
+}
+
+body {
+    margin: 0px;
+    padding: 0px;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+}
+
+header {
+    float: left;
+    width: 95%;
+    margin: 1%;
+    padding: 1%;
+    background-color: white;
+}
+
+menu {
+    float: left;
+    width: 95%;
+    margin: 1%;
+    padding: 1%;
+    background-color: white;
+}
+
+footer {
+    float: left;
+    width: 95%;
+    margin: 1%;
+    padding: 1%;
+    background-color: white;
+}
+
+/*Para PC (desde 1200px)*/
+@media (min-width: 1200px) {
+    body {
+       font-family: Arial;
+       background-color:honeydew;
+    }
+
+    .nav1 {
+        float: left;
+        width: 20%;
+        height: 400px;
+        margin: 1%;
+        padding: 1%;
+        background-color: rgb(218, 166, 186);
+    }
+
+    .nav2 {
+        float: left;
+        width: 73%;
+        height: 70px;
+        margin: 1%;
+        padding: 1%;
+        background-color: rgb(191, 252, 227);
+    }
+
+    main {
+        float: left;
+        width: 48%;
+        height: 300px;
+        margin: 1%;
+        padding: 3%;
+        background-color: rgb(255, 254, 217);
+    }
+
+    aside {
+        float: left;
+        width: 24%;
+        height: 300px;
+        margin: 1%;
+        padding: 1%;
+        background-color: rgb(235, 205, 255);
+    }
+}
+
+/*Para Tablet (desde 700px hasta 119px*/
+@media (min-width: 700px) and (max-width: 1199px){
+    body {
+        font-family: Calibri;
+        background-color:rgb(189, 252, 231);
+    }
+
+    .nav1 {
+        float: left;
+        width: 20%;
+        margin: 1%;
+        padding: 1%;
+        background-color: rgb(218, 166, 186);
+    }
+
+    .nav2 {
+        visibility: hidden;
+    }
+
+    main {
+        float: left;
+        width: 74%;
+        margin: 1%;
+        padding: 1%;
+        background-color: rgb(255, 254, 217);
+    }
+
+    aside {
+        float: left;
+        width: 95%;
+        margin: 1%;
+        padding: 1%;
+        background-color: rgb(235, 205, 255);
+    }
+}
+
+/*Para móviles (hasta 699px)*/
+@media (max-width: 699px){
+    body {
+        font-family: 'Times New Roman';
+        background-color:blanchedalmond;
+    }
+
+    .nav1 {
+        float: left;
+        width: 95%;
+        margin: 1%;
+        padding: 1%;
+        background-color: rgb(218, 166, 186);
+    }
+
+    .nav2 {
+        float: left;
+        width: 95%;
+        margin: 1%;
+        padding: 1%;
+        background-color: rgb(191, 252, 227);
+    }
+
+    main {
+        float: left;
+        width: 95%;
+        margin: 1%;
+        padding: 3%;
+        background-color: rgb(255, 254, 217);
+    }
+
+    aside {
+        float: left;
+        width: 95%;
+        margin: 1%;
+        padding: 1%;
+        background-color: rgb(235, 205, 255);
+    }
 }
