--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,7 +31,7 @@ Actividad 5.4.1. Transformaciones, desplazar y agrandar las imágenes al hacer h
   z-index: 5;
   display: inline-block;   /* para que las imágenes puedan crecer */
   line-height: 0;          /* elimina espacios invisibles */
-  transition: border, box-shadow 0.2s linear, transform 0.2s linear;
+  transition: box-shadow 0.2s linear, transform 0.2s linear, border 0.2s linear;
 }
 
 .img-transicion:hover {
@@ -67,6 +67,7 @@ Actividad 5.4.1. Transformaciones, desplazar y agrandar las imágenes al hacer h
     left: 16.7%;
     width: 83.3%;
     font-size: 1.25em;
+    z-index: 10;
   }
 
   aside {
